--- a/ControleSmartWEB/CLPmonitor1/clpmonitor/src/main/resources/application.properties
+++ b/ControleSmartWEB/CLPmonitor1/clpmonitor/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.thymeleaf.cache=false
 spring.mvc.view.prefix=/templates/
 spring.mvc.view.suffix=.html
 
-spring.datasource.url=jdbc:mysql://localhost:3306/musicdb
+spring.datasource.url=jdbc:mysql://localhost:3306/smart4db
 spring.datasource.username=root
 spring.datasource.password=207207
 spring.jpa.hibernate.ddl-auto=update
