--- a/AppSmartWeb_Projeto-Base/AppSmartWeb_Projeto-Base/loja-pedido/src/main/resources/application.properties
+++ b/AppSmartWeb_Projeto-Base/AppSmartWeb_Projeto-Base/loja-pedido/src/main/resources/application.properties
@@ -2,8 +2,9 @@ spring.application.name=loja-pedido
 
 spring.datasource.url=jdbc:mysql://localhost:3306/smart4db
 spring.datasource.username=root
-spring.datasource.password=senai
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+server.port=8081
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
