--- a/AppSmartWeb_Projeto-Base/AppSmartWeb_Projeto-Base/loja-pedido/src/main/resources/application.properties
+++ b/AppSmartWeb_Projeto-Base/AppSmartWeb_Projeto-Base/loja-pedido/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=loja-pedido
 
 spring.datasource.url=jdbc:mysql://localhost:3306/smart4db
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=senai
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 server.port=8081
